# ChangeLog for app-crypt/rarcrack
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*rarcrack-0.2 (10 Mar 2011)

  10 Mar 2011; Justin Lecher <jlec@gentoo.org> +files/0.2-gentoo.patch,
  +rarcrack-0.2.ebuild, +metadata.xml:
  new ebuild, written by me
